update jam 9 tanggal 18

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Convertache</string>
-
     <string-array name="suhu">
         <item>Celcius -> Reamur</item>
         <item>Celcius -> Fahrenhait</item>
@@ -29,5 +28,34 @@
         <item>Hexadesimal -> Biner</item>
         <item>Hexadesimal -> Desimal</item>
         <item>Hexadesimal -> Octal</item>
+    </string-array>
+    <string-array name="waktu">
+        <item>Day -> Hour</item>
+        <item>Day -> Minute</item>
+        <item>Day -> Second</item>
+        <item>Hour -> Day</item>
+        <item>Hour -> Minute</item>
+        <item>Hour -> Second</item>
+        <item>Minute -> Day</item>
+        <item>Minute -> Hour</item>
+        <item>Minute -> Second</item>
+        <item>Second -> Day</item>
+        <item>Second -> Hour</item>
+        <item>Second -> Minute</item>
+
+    </string-array>
+    <string-array name="massa">
+        <item>Kilogram -> Gram</item>
+        <item>Day -> Minute</item>
+        <item>Day -> Second</item>
+        <item>Hour -> Day</item>
+        <item>Hour -> Minute</item>
+        <item>Hour -> Second</item>
+        <item>Minute -> Day</item>
+        <item>Minute -> Hour</item>
+        <item>Minute -> Second</item>
+        <item>Second -> Day</item>
+        <item>Second -> Hour</item>
+        <item>Second -> Minute</item>
     </string-array>
 </resources>
